Konverze slibná verze